# Organizador-de-arquivo

./: pyproject.toml
code/: Organizador_arquivo.py  main.py  organizador.py  screen.py
code/views/: kview.kv
docs/: README.md
