[tool.poetry]
name = "arv-org"
version = "0.1.0"
description = "Projeto do organizador de arquivo do Desktop para Windows"
authors = ["PedroAOC20 <pedrodeveloperpyc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7 "


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
